# crisis_comm_env

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TECHNICAL.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  TERMINAL_COMMANDS.md  agent_policy.py  api_diagnostics.py  baseline_scores.json  evaluate_agent.py  inference.py  openenv.yaml  pyproject.toml  server_main.py  train_rl.py  validate-submission.sh
artifacts/: rl_policy.json  rl_policy_challenge.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/animations/: motionPresets.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/background/: CyberGridBackground.tsx  MatrixRain.tsx  RadarScanner.tsx
frontend/src/components/common/: SectionHeader.tsx  SkeletonCard.tsx  (+2 more)
frontend/src/hooks/: useCountUp.ts  useDeploymentDiagnostics.ts  useRealtimeSync.ts  useToast.ts
frontend/src/lib/: constants.ts  utils.ts
frontend/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  LandingPage.tsx  LogsPage.tsx  MissionsPage.tsx  NotFoundPage.tsx  SettingsPage.tsx  SimulationPage.tsx  StatePage.tsx
frontend/src/services/: api.ts  cache.ts
frontend/src/store/: simulationStore.ts
frontend/src/types/: api.ts
frontend/src/utils/: simulationMath.ts  sound.ts
server/: app.py  crisis_data.py  environment.py  grader.py  llm_judge.py  models.py  requirements.txt  state_manager.py  tasks.py  verify_project.py
(+29 files in other folders)
