[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisis-command"
version = "1.0.0"
description = "Multi-turn crisis communication OpenEnv environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.12",
  "openai==2.7.2",
  "openenv-core>=0.2.0",
  "pydantic==2.11.3",
  "pydantic-settings==2.8.1",
  "python-dotenv==1.1.0",
  "uvicorn==0.34.1",
]

[project.scripts]
server = "server_main:main"

[tool.setuptools]
py-modules = ["inference", "server_main"]
